export const snapshot = {};

snapshot[`parse() > howm taskのみのときは\`Task\`で返す 1`] = `
{
  ok: true,
  value: {
    name: "ハイウェイ惑星 買おうかな",
    raw: "ハイウェイ惑星 買おうかな~@2023-09-12",
    start: {
      date: 12,
      month: 9,
      year: 2023,
    },
    status: "up-down",
  },
}
`;

snapshot[`parse() > taskがないときは終了時刻まで明記する 1`] = `
{
  ok: true,
  value: {
    end: {
      date: 12,
      hours: 13,
      minutes: 0,
      month: 9,
      year: 2023,
    },
    name: "ハイウェイ惑星 買おうかな",
    raw: "ハイウェイ惑星 買おうかな@2023-09-12T12:50D10",
    start: {
      date: 12,
      hours: 12,
      minutes: 50,
      month: 9,
      year: 2023,
    },
  },
}
`;

snapshot[`parse() > taskがないときは終了時刻まで明記する 2`] = `
{
  ok: true,
  value: {
    end: {
      date: 12,
      hours: 14,
      minutes: 20,
      month: 9,
      year: 2023,
    },
    name: "ハイウェイ惑星 買おうかな",
    raw: "ハイウェイ惑星 買おうかな@2023-09-12T12:50/14:20",
    start: {
      date: 12,
      hours: 12,
      minutes: 50,
      month: 9,
      year: 2023,
    },
  },
}
`;

snapshot[`parse() > taskがないときは終了時刻まで明記する 3`] = `
{
  ok: false,
  value: {
    message: "No end date found in both a task specifier and an event specifier.",
    name: "LackDateError",
  },
}
`;

snapshot[`parse() > taskがないときは終了時刻まで明記する 4`] = `
{
  ok: false,
  value: {
    message: 'Could not found any "hours" parameter.',
    name: "LackDateError",
  },
}
`;

snapshot[`parse() > taskの日付情報から継承する 1`] = `
{
  ok: true,
  value: {
    end: {
      date: 13,
      hours: 13,
      minutes: 0,
      month: 9,
      year: 2023,
    },
    name: "ハイウェイ惑星 買おうかな",
    raw: "ハイウェイ惑星 買おうかな~@2023-09-12T12:50D10@13",
    start: {
      date: 13,
      hours: 12,
      minutes: 50,
      month: 9,
      year: 2023,
    },
    task: {
      duration: 10,
      name: "ハイウェイ惑星 買おうかな@13",
      raw: "ハイウェイ惑星 買おうかな~@2023-09-12T12:50D10@13",
      start: {
        date: 12,
        hours: 12,
        minutes: 50,
        month: 9,
        year: 2023,
      },
      status: "up-down",
    },
  },
}
`;

snapshot[`parse() > taskの日付情報から継承する 2`] = `
{
  ok: true,
  value: {
    end: {
      date: 13,
      hours: 13,
      minutes: 0,
      month: 9,
      year: 2023,
    },
    name: "ハイウェイ惑星 買おうかな",
    raw: "ハイウェイ惑星 買おうかな~@2023-09-12D10@13T12:50",
    start: {
      date: 13,
      hours: 12,
      minutes: 50,
      month: 9,
      year: 2023,
    },
    task: {
      duration: 10,
      name: "ハイウェイ惑星 買おうかな@13T12:50",
      raw: "ハイウェイ惑星 買おうかな~@2023-09-12D10@13T12:50",
      start: {
        date: 12,
        month: 9,
        year: 2023,
      },
      status: "up-down",
    },
  },
}
`;

snapshot[`parse() > taskの日付情報から継承する 3`] = `
{
  ok: true,
  value: {
    end: {
      date: 13,
      hours: 13,
      minutes: 0,
      month: 9,
      year: 2023,
    },
    name: "ハイウェイ惑星 買おうかな",
    raw: "ハイウェイ惑星 買おうかな~@2023-09-12@13T12:50D10",
    start: {
      date: 13,
      hours: 12,
      minutes: 50,
      month: 9,
      year: 2023,
    },
    task: {
      name: "ハイウェイ惑星 買おうかな@13T12:50D10",
      raw: "ハイウェイ惑星 買おうかな~@2023-09-12@13T12:50D10",
      start: {
        date: 12,
        month: 9,
        year: 2023,
      },
      status: "up-down",
    },
  },
}
`;

snapshot[`parse() > taskの日付情報から継承する 4`] = `
{
  ok: true,
  value: {
    end: {
      date: 13,
      hours: 14,
      minutes: 20,
      month: 9,
      year: 2023,
    },
    name: "ハイウェイ惑星 買おうかな",
    raw: "ハイウェイ惑星 買おうかな~@2023-09-12@13T12:50/14:20",
    start: {
      date: 13,
      hours: 12,
      minutes: 50,
      month: 9,
      year: 2023,
    },
    task: {
      name: "ハイウェイ惑星 買おうかな@13T12:50/14:20",
      raw: "ハイウェイ惑星 買おうかな~@2023-09-12@13T12:50/14:20",
      start: {
        date: 12,
        month: 9,
        year: 2023,
      },
      status: "up-down",
    },
  },
}
`;

snapshot[`parse() > taskの日付情報から継承する 5`] = `
{
  ok: true,
  value: {
    end: {
      date: 13,
      hours: 13,
      minutes: 0,
      month: 12,
      year: 2023,
    },
    name: "ハイウェイ惑星 買おうかな",
    raw: "ハイウェイ惑星 買おうかな~@2023-09-12@12-13T12:50D10",
    start: {
      date: 13,
      hours: 12,
      minutes: 50,
      month: 12,
      year: 2023,
    },
    task: {
      name: "ハイウェイ惑星 買おうかな@12-13T12:50D10",
      raw: "ハイウェイ惑星 買おうかな~@2023-09-12@12-13T12:50D10",
      start: {
        date: 12,
        month: 9,
        year: 2023,
      },
      status: "up-down",
    },
  },
}
`;

snapshot[`parse() > taskの日付情報から継承する 6`] = `
{
  ok: true,
  value: {
    end: {
      date: 13,
      hours: 13,
      minutes: 0,
      month: 12,
      year: 2024,
    },
    name: "ハイウェイ惑星 買おうかな",
    raw: "ハイウェイ惑星 買おうかな~@2023-09-12@2024-12-13T12:50D10",
    start: {
      date: 13,
      hours: 12,
      minutes: 50,
      month: 12,
      year: 2024,
    },
    task: {
      name: "ハイウェイ惑星 買おうかな@2024-12-13T12:50D10",
      raw: "ハイウェイ惑星 買おうかな~@2023-09-12@2024-12-13T12:50D10",
      start: {
        date: 12,
        month: 9,
        year: 2023,
      },
      status: "up-down",
    },
  },
}
`;

snapshot[`parse() > taskの日付情報から継承する 7`] = `
{
  ok: false,
  value: {
    message: 'Could not found any "hours" parameter.',
    name: "LackDateError",
  },
}
`;

snapshot[`parse() > taskの日付情報から継承する 8`] = `
{
  ok: false,
  value: {
    message: "No end date found in both a task specifier and an event specifier.",
    name: "LackDateError",
  },
}
`;

snapshot[`parse() > taskの日付情報から継承する 9`] = `
{
  ok: false,
  value: {
    message: 'Could not found any "hours" parameter.',
    name: "LackDateError",
  },
}
`;

snapshot[`parse() > taskとeventの日付指定は順不同 1`] = `
{
  ok: true,
  value: {
    end: {
      date: 13,
      hours: 13,
      minutes: 0,
      month: 9,
      year: 2023,
    },
    name: "ハイウェイ惑星 買おうかな",
    raw: "@13ハイウェイ惑星 買おうかな~@2023-09-12T12:50D10",
    start: {
      date: 13,
      hours: 12,
      minutes: 50,
      month: 9,
      year: 2023,
    },
    task: {
      duration: 10,
      name: "@13ハイウェイ惑星 買おうかな",
      raw: "@13ハイウェイ惑星 買おうかな~@2023-09-12T12:50D10",
      start: {
        date: 12,
        hours: 12,
        minutes: 50,
        month: 9,
        year: 2023,
      },
      status: "up-down",
    },
  },
}
`;

snapshot[`parse() > taskとeventの日付指定は順不同 2`] = `
{
  ok: true,
  value: {
    end: {
      date: 24,
      hours: 13,
      minutes: 0,
      month: 9,
      year: 2023,
    },
    name: "←がTaskを指定し、~←がEventを指定する",
    raw: "~@2023-09-12T12:50D10 ←がTaskを指定し、~@09-24←がEventを指定する",
    start: {
      date: 24,
      hours: 12,
      minutes: 50,
      month: 9,
      year: 2023,
    },
    task: {
      duration: 10,
      name: "←がTaskを指定し、~@09-24←がEventを指定する",
      raw: "~@2023-09-12T12:50D10 ←がTaskを指定し、~@09-24←がEventを指定する",
      start: {
        date: 12,
        hours: 12,
        minutes: 50,
        month: 9,
        year: 2023,
      },
      status: "up-down",
    },
  },
}
`;
